@@ -54,6 +54,12 @@ us a note on ns-developers mailing list.</p>
 <h1>Changes from ns-3.22 to ns-3.23</h1>
 <h2>New API:</h2>
 <ul>
+  <li> The mobility module includes a GeographicPositions class used to
+convert geographic to cartesian coordinates, and to generate randomly
+distributed geographic coordinates.
+  </li>
+  <li>  The spectrum module includes new TvSpectrumTransmitter classes and helpers to create television transmitter(s) that transmit PSD spectrums customized by attributes such as modulation type, power, antenna type, channel frequency, etc.
+  </li>
 </ul>
 <h2>Changes to existing API:</h2>
 <ul>
